--- a/ghpages/main.css
+++ b/ghpages/main.css
@@ -1,3 +1,8 @@
+@keyframes fade {
+  0% { opacity: 0 }
+  100% { opacity: 1 }
+}
+
 .bottom-search-bar {
   position: fixed;
   background: rgba(250, 255, 200, 1);
@@ -5,6 +10,7 @@
   padding: 0.8rem;
   font-size: 0.7rem;
   border-top: 2px solid navy;
+  /* animation: 0.5s linear fade; */
 }
 
 .overflower {
@@ -15,7 +21,7 @@
 .bottom-search-bar input { display: inline-block; }
 .help { display: inline-block; }
 
-/* If width is less than 800 do this stuff */
+/* If width is more than 800 do this stuff */
 @media (min-width: 800px)
 {
   .bottom-search-bar {
@@ -23,6 +29,7 @@
     right: 0;
     width: 250px;
     height: 100%;
+    /*display: none;*/
   }
 }
 
