--- a/ghpages/main.css
+++ b/ghpages/main.css
@@ -88,11 +88,11 @@ h3 {
 
 .mod-entry {
   font-size: 0.7rem;
-  display: inline-block;
-  width: 170px;
-  margin: 20px;
-  margin-top: 40px;
   padding: 4px;
+}
+
+.mod-entry td {
+  min-width: 80px;
   position: relative;
 }
 
@@ -101,9 +101,6 @@ h3 {
   valign: bottom;
   height: 40px;
   max-height: auto;
-  position: absolute;
-  top: -40px;
-  left: -30px;
   box-shadow: 3px 3px 4px #000;
   transform: rotate(-15deg);
   -ms-transition: 0.4s ease-in-out;
@@ -115,8 +112,6 @@ h3 {
 .mod-entry img[alt="pic"]:hover {
   height: auto;
   transform: rotate(0);
-  top: -70px;
-  left: -30px;
   z-index: 3;
 }
 
