--- a/ghpages/main.css
+++ b/ghpages/main.css
@@ -15,13 +15,21 @@
   /* animation: 0.5s linear fade; */
 }
 
+.bottom-search-bar img {
+  max-height: 15px;
+}
+
+table tr td:nth-child(4) img {
+  max-height: 15px;
+}
+
 .bottom-search-bar h5 {
   padding-left: 40px;
 }
 
 .overflower {
   display: block;
-  max-height: 100px;
+  max-height: 200px;
   overflow: scroll;
 }
 .bottom-search-bar input { display: inline-block; }
@@ -59,11 +67,6 @@
 
 .spacer {
   min-height: 300px;
-}
-
-.barbutton {
-  cursor: pointer;
-  margin: 1px;
 }
 
 .help:hover {
@@ -128,4 +131,16 @@ table tr td {
 
 table tr td img {
   max-width: 80px !important;
+}
+
+.barbutton {
+  border: 1px solid rgba(0,0,0,0);
+  cursor: pointer;
+  margin: 1px;
+  opacity: 0.5;
+}
+
+.active {
+  box-shadow: 0px 0px 6px lime;
+  opacity: 1;
 }
