--- a/ghpages/main.css
+++ b/ghpages/main.css
@@ -19,7 +19,13 @@
   max-height: 15px;
 }
 
+table tr td:nth-child(4) {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 table tr td:nth-child(4) img {
+  margin-right: 3px;
   max-height: 15px;
 }
 
@@ -101,7 +107,6 @@ h3 {
 
 .mod-entry img[alt="pic"] {
   vertical-align: bottom;
-  valign: bottom;
   height: 40px;
   max-height: auto;
   box-shadow: 3px 3px 4px #000;
@@ -137,10 +142,12 @@ table tr td img {
   border: 1px solid rgba(0,0,0,0);
   cursor: pointer;
   margin: 1px;
-  opacity: 0.75;
+  opacity: 0.65;
 }
 
 .active {
+  border-radius: 4px;
+  border: 2px solid #fff;
   box-shadow: 0px 0px 6px lime;
   opacity: 1;
 }
